# EX.Materials

./: .gitignore  README.md  Untitled Diagram.drawio  example.py  funtion.py  grad.py
DeepLeaning/fromScrach/: grad.py  test.py
DeepLeaning/fromScrach/dezero/: __init__.py  core.py  utils.py
DeepLeaning/fromScrach/dezero_out/: tmp_graph.dot
Python/: ex_2_17_bisect_search.py  test_ex_1_1.py
dezero/: core.py  functions.py  utils.py
dezero_out/: tmp_graph.dot
python-di-webapp/: README.rst  config.yml  docker-compose-db.yml  docker-compose-dev.yml  docker-compose.yml  generate_keys.py  requirements.txt  run_local.sh
python-di-webapp/.cursor/rules/: di-python.mdc
python-di-webapp/migrations/: env.py  migrate-mongo-config.js
python-di-webapp/migrations/versions/: 29c055103f45_add_imageobject_to_user_and_order.py  3241fa6cf17c_replace_image_url_list_to_image_path_.py  48a2f446fd91_add_quantity_on_order.py  5f848f9e2147_add_user_role.py  83fe5c1cad32_add_mainpagesetting.py  (+4 more)
python-di-webapp/util_for_test/: test_async.bash
python-di-webapp/webapp/: application.py  containers.py  database.py  endpoints.py  models.py  repositories.py  schemas.py  security.py  services.py  tests.py  utils.py
python-typer-app/: README.md  pyproject.toml
python-typer-app/python_typer_app/: main.py
react/: readme.md
react/my-app/: package-lock.json  package.json
study/time_seriese/: 00_test_plot_ts_data.ipynb  01_test_stm.ipynb  README.md  pyproject.toml
systemd/: chanyoung-service1.service  chanyoung-service2.service  other-service.service  other-service.sh  readme.md
(+7 files in other folders)
