[tool.poetry]
name = "python-typer-app"
version = "0.1.0"
description = ""
authors = ["ChanYoungHan <sanbon0812@naver.com>"]
readme = "README.md"
packages = [{include = "python_typer_app"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
loguru = "^0.7.2"

[tool.poetry.scripts]
python-typer-app = "python_typer_app.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
